[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Niklas Gehlen <niklas@namespacelabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
